--- a/PL4/Exercicio1/nbproject/private/private.properties
+++ b/PL4/Exercicio1/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\i140870\\AppData\\Roaming\\NetBeans\\8.0\\build.properties
+user.properties.file=/home/ruimoreira/.netbeans/8.0/build.properties
