--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 /PL4/Exercicio2/nbproject/private/
 /PL4/Exercicio2/build/
+/PL4/Exercicio3/nbproject/private/
+/PL4/Exercicio3/build/
+/PL4/Exercicio3/dist/
+/PL4/Exercicio4/nbproject/private/
+/PL4/Exercicio4/build/
