--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,9 @@
 /PL4/Exercicio3/dist/
 /PL4/Exercicio4/nbproject/private/
 /PL4/Exercicio4/build/
+/PL4/Exercicio5/nbproject/private/
+/PL4/Exercicio6/nbproject/private/
+/PL4/Exercicio5/build/
+/PL4/Exercicio5/dist/
+/PL4/Exercicio6/dist/
+/PL4/Exercicio6/build/
