Exercicio4, 3 compl sub 1 e sub 2

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,9 @@
 /PL4/Exercicio5/dist/
 /PL4/Exercicio6/dist/
 /PL4/Exercicio6/build/
+/PL4/Exercicio3Comp1/nbproject/private/
+/PL4/Exercicio3Comp2/nbproject/private/
+/PL4/Exercicio3Comp2/build/
+/PL4/Exercicio3Comp2/dist/
+/PL4/Exercicio3Comp1/build/
+/PL4/Exercicio3Comp1/dist/
