--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,10 @@
 /PL4/Exercicio3Comp2/dist/
 /PL4/Exercicio3Comp1/build/
 /PL4/Exercicio3Comp1/dist/
+/PL4/Exercicio4/dist/
+/PL4/Exercicio3Comp3/nbproject/private/
+/PL4/Exercicio3Comp4/nbproject/private/
+/PL4/Exercicio3Comp4/build/
+/PL4/Exercicio3Comp4/dist/
+/PL4/Exercicio3Comp3/build/
+/PL4/Exercicio3Comp3/dist/
