--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 /PL5/Exercicio5/nbproject/private/
 /PL5/Exercicio5/build/
 /PL5/Exercicio4/nbproject/private/
+/PL6/ExDemonstrativo1/nbproject/private/
+/PL6/Exercicio1/nbproject/private/
+/PL6/Exercicio3/nbproject/private/
+/PL6/Exercicio3/build/
+/PL6/Exercicio3/dist/
