--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,13 @@
 /PL6/Exercicio3/nbproject/private/
 /PL6/Exercicio3/build/
 /PL6/Exercicio3/dist/
+/PL6/ExDemonstrativo1/build/
+/PL6/ExDemonstrativo1/dist/
+/PL6/Exercicio2/nbproject/private/
+/PL6/Exercicio2/build/
+/PL6/Exercicio4/nbproject/private/
+/PL6/Exercicio4/build/
+/PL6/Exercicio5/nbproject/private/
+/PL6/Exercicio5/build/
+/PL6/Exercicio6/nbproject/private/
+/PL6/Exercicio6/build/
