--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,5 @@
 /PL6/Exercicio5/build/
 /PL6/Exercicio6/nbproject/private/
 /PL6/Exercicio6/build/
+/PL6/ExercicioC4/nbproject/private/
+/PL6/ExercicioC4/build/
